--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "front",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://vasylkhoroshcho.github.io/FRONT",
   "dependencies": {
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
