--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "react-scripts": "1.1.4"
   },
   "scripts": {
+    "start": "sudo chmod +x ddd.sh | sh ddd.sh",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
