--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
   directories:
   - node_modules
 script:
-  - REACT_APP_URL=$API_URL npm run predeploy
+  - npm run build
 deploy:
   provider: heroku
   skip_cleanup: true
