--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,25 @@
-language: node_js
-node_js:
-  - "stable"
-cache:
-  directories:
-  - node_modules
-script:
-  - npm run build
-deploy:
-  provider: heroku
-  skip_cleanup: true
-  api_key: $API_KEY
-  app: mev-gallery
-  on:
-    branch: master
+jobs:
+  include:
+    - stage: testing
+      language: node_js
+      node_js:
+        - "stable"
+      script:
+        - npm install
+        - npm run lint
+    - stage: deploy
+      language: node_js
+      node_js:
+        - "stable"
+      cache:
+        directories:
+        - node_modules
+      script:
+        - npm run build
+      deploy:
+        provider: heroku
+        skip_cleanup: true
+        api_key: $API_KEY
+        app: mev-gallery
+on:
+  branch: master
