--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "scripts": {
     "start": "sudo chmod +x heroku.sh | sh heroku.sh",
     "build": "react-scripts build",
+    "lint": "eslint .",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "dotenv": "^6.0.0",
-    "gh-pages": "^1.2.0"
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-react": "^7.10.0"
   }
 }
